# XpcScope

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  target.example.py
.github/workflows/: release.yml
agent/: .gitignore  package-lock.json  package.json
agent/src/: index.ts  libxpc.ts  nsxpc.ts  polyfill.ts  sm.ts  symbol.ts  utils.ts
assets/: resources.qrc
lua/: dissector.lua  json.lua  xpc.lua
src/frida/: package-lock.json  package.json  tsconfig.json
src/frida/agent/: index.ts  libxpc.ts  nsxpc.ts  sm.ts
src/xpcscope/: core.py  hexdump.py  pcap.py
src/xpcscope/backend/: services.py
src/xpcscope/ui/: capture.py  listview.py
xpcscope/: main.py  pcap.py
xpcscope/backend/: services.py
