[tool.poetry]
name = "xpcscope"
version = "0.2.0"
description = ""
authors = ["Zhi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
frida = "^16.6.6"

[tool.poetry.group.dev.dependencies]
frida-tools = "^13.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
